# file-whisperer

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
src/file_whisperer/: cli.py  paths.py  scanner.py
tests/: test_foo.py
tests/integration/: test_cli_run.py
tests/unit/: test_cli.py  test_scanner.py
